# WeightVizWiz

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  ruff.toml  visualize.ipynb
resources/: tab.ui  wvw.ui
wvw/: __main__.py  convert_image.py  kernel_view.py  register_widgets.py
