[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core~=2.1"]

[project]
name = "wvw"
version = "1.0.0"
authors = [
    { name = "Alexander Auras", email = "33501357+AlexanderAuras@users.noreply.github.com" },
]
description = ""
keywords = ["neural networks", "visualization"]
# license = ""
# license-files = [ "LICENSE" ]
readme = "README.md"
requires-python = "~=3.11.0"
dynamic = [ "classifiers" ]

#[project.urls]
#homepage = ""
#paper = ""
#source = ""
#issues = ""

[project.scripts]
wvw = "wvw.__main__:main"

[tool.poetry.dependencies]
torch = { version = "2.1.0", source = "torch-cuda" }
pyside6 = "^6.9.0"

[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.397"
black = "^25.1.0"
debugpy = "^1.8.13"
ruff = "^0.11.2"

[tool.poetry]
requires-poetry = "~=2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

[tool.black]
include = "wvw/.*\\.py"
line-length = 180
